Gradle support added.